kubernetes/storage/cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
